recipe app search-updation-delete

--- a/vege/templates/recipe.html
+++ b/vege/templates/recipe.html
@@ -25,7 +25,47 @@
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
+        <hr>
+        <div class="mt-5">
+            <div class="mx-auto col-6">
+                <form>
+                    <div class="mb-3">
+                    <label for="search" class="form-label">Search Food</label>
+                    <input type="text" name="search" class="form-control mr-2" >
+                </div>
+                <button type="submit" class="btn btn-primary">Search</button>
+                </form>
+            </div>
+
+        </div>
+        <h2 class="mt-5">Recipe List</h2>
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th>Recipe Name</th>
+                    <th>Description</th>
+                    <th>Image</th>
+                    <th>Actions</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for recipe in recipes %}
+                <tr>
+                    <td>{{ recipe.recipe_name }}</td>
+                    <td>{{ recipe.recipe_description }}</td>
+                    <td>
+                        <img src="/media/{{ recipe.recipe_image}}" alt="{{ recipe.recipe_name }}" class="img-thumbnail" style="max-width: 100px;">
+                    </td>
+                    <td>
+                        <a href="/delete_recipe/{{recipe.id}}/",class="btn btn-danger">Delete</a>
+                        <a href="/update_recipe/{{recipe.id}}/",class="btn btn-success">Update</a>
+                    </td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
     </div>
+
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
